Fixed copyright alignment

--- a/projects/portfolio/src/app/app.component.scss
+++ b/projects/portfolio/src/app/app.component.scss
@@ -75,7 +75,15 @@ h1 {
 }
 
 .footer {
-    font-size: 16px;
+    font-size: 12px;
     text-align: center;
     padding-bottom: 25px;
+    flex-grow: 1;
+    position: relative;
+
+    p {
+        position: absolute;
+        bottom: 25px;
+        width: 100%;
+    }
 }
